# crowhelp

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp  main.h
src/tools/common/: Notify.cpp  Notify.h  Webhook.cpp  Webhook.h
src/tools/helpers/: ChatInput.h  GetLastLine.cpp  GetLastLine.h  WaitPlayerReady.cpp  WaitPlayerReady.h
